--- a/public/landscape/index.html
+++ b/public/landscape/index.html
@@ -12,7 +12,7 @@
   <meta charset="utf-8">
   <link type="text/css" rel="stylesheet" href="style.css">
   <link rel="manifest" href="manifest.json" />
-  <script type="module" src="/assets/js/main.js"></script>
+  <script type="module" src="/assets/js/landscape.js"></script>
 </head>
 
 <body>
