--- a/public/functor/index.html
+++ b/public/functor/index.html
@@ -9,7 +9,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   </meta>
   <title>FUNCTOR 001</title>
-  <link rel="manifest" href="manifest.json" />
+  <link rel="manifest" href="/functor/manifest.json" />
   <link rel="stylesheet" href="/assets/css/functor.css">
   </style>
   <script src="/assets/lib/aframe-v1.7.1.min.js"></script>
@@ -58,7 +58,7 @@
         animation="property:position; dur: 13000; fill: forwards; to: -0.1 0.1 -1; loop: true; dir: alternate; easing: easeInOutSine;"></a-plane>
     </a-entity>
 
-    <a-camera look-controls="enabled: true" fov="73" pigeon-functor></a-camera>
+    <a-camera look-controls="enabled: true" position="0 1.55 0" pigeon-functor></a-camera>
   </a-scene>
 </body>
 
