--- a/public/room/index.html
+++ b/public/room/index.html
@@ -9,7 +9,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   </meta>
   <title>FUNCTOR 001 Hyper Room</title>
-  <link rel="manifest" href="manifest.json" />
+  <link rel="manifest" href="/room/manifest.json" />
   <link rel="stylesheet" href="/assets/css/room.css">
   </style>
   <script src="/assets/lib/aframe-v1.7.1.min.js"></script>
@@ -37,27 +37,27 @@
 
     <a-entity emoji-boid></a-entity>
 
-    <a-entity position="0 1.55 -0.4" animation="property:rotation; dur: 30000; fill: forwards; to: 0 360 0; loop: true; easing: linear;">
+    <a-entity position="0 1.55 0" animation="property:rotation; dur: 30000; fill: forwards; to: 0 360 0; loop: true; easing: linear;">
       <a-plane src="#emoji1" height="0.3" width="0.3" position="0 0.2 -1.6" rotation="0 0 0" material="transparent: true; side: double; alphaTest: 0.1;"
         animation="property:position; dur: 12000; fill: forwards; to: 0 -0.2 -1.6; loop: true; dir: alternate; easing: easeInOutSine;"></a-plane>
     </a-entity>
 
-    <a-entity position="0 1.55 -0.5" animation="property:rotation; dur: 45000; fill: forwards; to: 0 360 0; loop: true; easing: linear;">
+    <a-entity position="0 1.55 0" animation="property:rotation; dur: 45000; fill: forwards; to: 0 360 0; loop: true; easing: linear;">
       <a-plane src="#emoji2" height="0.4" width="0.4" position="0 0.3 0.8" rotation="0 0 0" material="transparent: true; side: double; alphaTest: 0.1;"
         animation="property:position; dur: 11000; fill: forwards; to: 0 -0.1 0.8; loop: true; dir: alternate; easing: easeInOutSine;"></a-plane>
     </a-entity>
 
-    <a-entity position="0 1.55 -0.2" animation="property:rotation; dur: 40000; fill: forwards; to: 0 360 0; loop: true; easing: linear;">
+    <a-entity position="0 1.55 0" animation="property:rotation; dur: 40000; fill: forwards; to: 0 360 0; loop: true; easing: linear;">
       <a-plane src="#emoji3" height="0.3" width="0.3" position="0.8 0.4 1.2" rotation="0 0 0" material="transparent: true; side: double; alphaTest: 0.1;"
         animation="property:position; dur: 10000; fill: forwards; to: 0.8 -0.2 1.2; loop: true; dir: alternate; easing: easeInOutSine;"></a-plane>
     </a-entity>
 
-    <a-entity position="0 1.55 -0.3" animation="property:rotation; dur: 35000; fill: forwards; to: 0 360 0; loop: true; easing: linear;">
-      <a-plane src="#emoji4" height="0.4" width="0.4" position="-0.4 0.1 -0.7" rotation="0 0 0" material="transparent: true; side: double; alphaTest: 0.1;"
-        animation="property:position; dur: 14000; fill: forwards; to: -0.4 -0.2 -0.7; loop: true; dir: alternate; easing: easeInOutSine;"></a-plane>
+    <a-entity position="0 1.55 0" animation="property:rotation; dur: 35000; fill: forwards; to: 0 360 0; loop: true; easing: linear;">
+      <a-plane src="#emoji4" height="0.4" width="0.4" position="-0.4 0.1 1.1" rotation="0 0 0" material="transparent: true; side: double; alphaTest: 0.1;"
+        animation="property:position; dur: 14000; fill: forwards; to: -0.4 -0.2 1.1; loop: true; dir: alternate; easing: easeInOutSine;"></a-plane>
     </a-entity>
 
-    <a-entity position="0 1.55 -0.1" animation="property:rotation; dur: 25000; fill: forwards; to: 0 360 0; loop: true; easing: linear;">
+    <a-entity position="0 1.55 0" animation="property:rotation; dur: 25000; fill: forwards; to: 0 360 0; loop: true; easing: linear;">
       <a-plane src="#emoji5" height="0.3" width="0.3" position="-0.1 0.7 -1" rotation="0 0 0" material="transparent: true; side: double; alphaTest: 0.1;"
         animation="property:position; dur: 13000; fill: forwards; to: -0.1 0.1 -1; loop: true; dir: alternate; easing: easeInOutSine;"></a-plane>
     </a-entity>
