--- a/public/functor/index.html
+++ b/public/functor/index.html
@@ -17,6 +17,7 @@
   <script src="/assets/js/pigeon-functor.js" type="module"></script>
   <script src="/assets/js/aframe-emoji-boid.js" type="module"></script>
   <script src="/assets/js/emoji-starter.js" type="module"></script>
+  <script src="/assets/js/peerjs-functor.js" type="module"></script>
 </head>
 
 <body style="margin : 0px; overflow: hidden;">
