--- a/public/room/index.html
+++ b/public/room/index.html
@@ -18,6 +18,7 @@
   <script src="/assets/js/pigeon-receiver.js" type="module"></script>
   <script src="/assets/js/aframe-emoji-boid.js" type="module"></script>
   <script src="/assets/js/emoji-starter.js" type="module"></script>
+  <script src="/assets/js/peerjs-room.js" type="module"></script>
 </head>
 
 <body style="margin : 0px; overflow: hidden;">
