Load initial video as an a-asset

--- a/public/room/index.html
+++ b/public/room/index.html
@@ -32,6 +32,7 @@
       <img id="emoji3" src="/assets/images/emoji3.png" />
       <img id="emoji4" src="/assets/images/emoji4.png" />
       <img id="emoji5" src="/assets/images/emoji5.png" />
+      <video id="remote_video" autoplay loop="true" src="/assets/video/black.mp4"></video>
     </a-assets>
 
     <a-entity gltf-model="#room" position="0 1.4 -0.5" rotation="0 -90 0"></a-entity>
@@ -67,7 +68,6 @@
     <a-entity camera look-controls="enabled: false" orbit-controls="target: 0 1.55 0; minDistance: 0.3; maxDistance: 1.2; initialPosition: 1 2 -1; rotateSpeed: 0.5; enablePan: false; autoRotate: true; autoRotateSpeed: 0.1;"></a-entity>
     <video id="remote_video" autoplay></video>
   </a-scene>
-  <video id="remote_video" src="/assets/video/black.mp4"></video>
 </body>
 
 </html>
