--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
 
 <body>
   <div id="credit"></div>
+  <canvas id="textureCanvas" style="position: absolute; top: 10px; right: 10px; width: 256px; height: 256px; z-index: 1000; border: 1px solid #ccc;"></canvas>
 </body>
 
 </html>
