--- a/public/receiver.html
+++ b/public/receiver.html
@@ -17,7 +17,7 @@
 
 <body>
   <div id="credit"></div>
-  <canvas id="textureCanvas" style="position: absolute; top: 10px; right: 10px; width: 256px; height: 256px; z-index: 1000; border: 1px solid #ccc;"></canvas>
+  <video id="textureCanvas" autoplay playsinline muted style="position: absolute; top: 10px; right: 10px; width: 256px; height: 256px; z-index: 1000; border: 1px solid #ccc;"></video>
 </body>
 
 </html>
