Eliminate CDN dependency for libraries

--- a/public/functor/index.html
+++ b/public/functor/index.html
@@ -12,8 +12,9 @@
   <link rel="manifest" href="/functor/manifest.json" />
   <link rel="stylesheet" href="/assets/css/functor.css">
   </style>
-  <script src="https://aframe.io/releases/1.7.1/aframe.min.js"></script>
-  <script src="/assets/lib/aframe-ar.js"></script>
+  <script src="/assets/js/libs/aframe-v1.7.1.min.js"></script>
+  <script src="/assets/js/libs/aframe-ar.js"></script>
+  <script src="/assets/js/libs/peerjs.min.js"></script>
   <script src="/assets/js/pigeon-functor.js" type="module"></script>
   <script src="/assets/js/aframe-emoji-boid.js" type="module"></script>
   <script src="/assets/js/emoji-starter.js" type="module"></script>
