--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,8 @@
   <meta charset="utf-8">
   <link type="text/css" rel="stylesheet" href="/assets/css/index.css">
   <link rel="manifest" href="manifest.json" />
-  <script type="module" src="/assets/js/landscape.js"></script>
+  <script src="/assets/js/libs/peerjs.min.js"></script>
+  <script src="/assets/js/landscape.js" type="module"></script>
 </head>
 
 <body>
