--- a/public/room/index.html
+++ b/public/room/index.html
@@ -12,9 +12,10 @@
   <link rel="manifest" href="/room/manifest.json" />
   <link rel="stylesheet" href="/assets/css/room.css">
   </style>
-  <script src="/assets/lib/aframe-v1.7.1.min.js"></script>
-  <script src="https://unpkg.com/aframe-environment-component@1.3.3/dist/aframe-environment-component.min.js"></script>
-  <script src="https://unpkg.com/aframe-orbit-controls@1.3.2/dist/aframe-orbit-controls.min.js"></script>
+  <script src="/assets/js/libs/aframe-v1.7.1.min.js"></script>
+  <script src="/assets/js/libs/aframe-environment-component.min.js"></script>
+  <script src="/assets/js/libs/aframe-orbit-controls.min.js"></script>
+  <script src="/assets/js/libs/peerjs.min.js"></script>
   <script src="/assets/js/pigeon-receiver.js" type="module"></script>
   <script src="/assets/js/aframe-emoji-boid.js" type="module"></script>
   <script src="/assets/js/emoji-starter.js" type="module"></script>
