Describe the direction of this repo

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   </meta>
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   </meta>
-  <title>FUNCTOR 001 Hyper Landscape</title>
+  <title>FUNCTOR 002 Source Landscape</title>
   <meta charset="utf-8">
   <link type="text/css" rel="stylesheet" href="/assets/css/index.css">
   <link rel="manifest" href="manifest.json" />
